--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Hero Banner -->
     <section id="inicio" class="hero">
         <div class="hero-texto">
-            <a href="#productos" class=""></a>
+            <a href="#productos" class="">a</a>
         </div>
     </section>
 
