--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tienda de accesorios elegantes. Envíos a todo México.">
-    <title>Accesorios Elegantes | Tienda Online</title>
+    <meta name="description" content="Tienda de Artesana. Envíos a todo México.">
+    <title>Artesana | Tienda Online</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -12,7 +12,7 @@
     <!-- Barra de navegación -->
     <header>
         <div class="logo">
-            <a href="/"><img src="logo.png" alt="Accesorios Elegantes"></a>
+            <a href="/"><img src="logo.png" alt="Artesana"></a>
         </div>
         <nav>
             <ul>
@@ -85,7 +85,14 @@
             </div>
         </div>
     </div>
-
+    <section class="seccion-videos">
+        <h2>Lo último en nuestras redes</h2>
+        <div class="slider-videos">
+            <div class="slider-track">
+                <!-- Los videos se insertarán dinámicamente -->
+            </div>
+        </div>
+    </section>
     <!-- Footer -->
     <footer id="contacto">
         <div class="redes-sociales">
@@ -93,7 +100,7 @@
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-whatsapp"></i></a>
         </div>
-        <p>&copy; 2025 Accesorios Elegantes. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Artesana. Todos los derechos reservados.</p>
     </footer>
     <script src="script.js"></script>
 </body>
