Antes de android

--- a/index.html
+++ b/index.html
@@ -103,5 +103,6 @@
         <p>&copy; 2025 Artesana. Todos los derechos reservados.</p>
     </footer>
     <script src="script.js"></script>
+    <script async src="https://www.tiktok.com/embed.js"></script>
 </body>
 </html>
