--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tienda de Artesana. Envíos a todo México.">
     <title>Artesana | Tienda Online</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Stoke:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -12,7 +15,7 @@
     <!-- Barra de navegación -->
     <header>
         <div class="logo">
-            <a href="/"><img src="logo.png" alt="Artesana"></a>
+            <a href="/"><img src="./imagenes/logo.png" alt="Artesana" class="profile-pic"></a>
         </div>
         <nav>
             <ul>
@@ -30,7 +33,7 @@
     <!-- Hero Banner -->
     <section id="inicio" class="hero">
         <div class="hero-texto">
-            <a href="#productos" class="">a</a>
+            <a href="#productos" class=""></a>
         </div>
     </section>
 
@@ -96,9 +99,9 @@
     <!-- Footer -->
     <footer id="contacto">
         <div class="redes-sociales">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.tiktok.com/@artesanaoficial?_t=ZS-8wKDMMxJXXk&_r=1"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.instagram.com/artessana_oficial/profilecard/?igsh=d2E5NGM2NDI5bjZo"><i class="fab fa-instagram"></i></a>
+            <a href="https://wa.link/rzcs8p"><i class="fab fa-whatsapp"></i></a>
         </div>
         <p>&copy; 2025 Artesana. Todos los derechos reservados.</p>
     </footer>
