Rutas Limpias y menu filtros movil

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         
         <nav class="nav-menu">
             <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#productos">Productos</a></li>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/products">Productos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
@@ -43,7 +43,7 @@
     <!-- Hero Banner -->
     <section id="inicio" class="hero">
         <div class="hero-texto">
-            <a href="#productos" class=""></a>
+            <a href="/" class=""></a>
         </div>
     </section>
 
@@ -53,7 +53,7 @@
             <!-- Los productos se cargarán con JavaScript -->
         </div>
         <div class="MasOpciones">
-            <a href="./productos.html">Ver Mas</a>
+            <a href="./products">Ver Mas</a>
         </div>
     </section>
   <!-- Modal del Producto -->
