menu filtros movil mejorados v4

--- a/acarte/index.html
+++ b/acarte/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Productos</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="/acarte/admin.css">
+    <link rel="stylesheet" href="./admin.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body class="acarte">
       <header>
@@ -92,6 +93,6 @@
         </div>
     </div>
 
-    <script src="/acarte/admin.js"></script>
+    <script src="./admin.js"></script>
 </body>
 </html>
